cleaned up workspace

--- a/function_test.ipynb
+++ b/function_test.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "356592f0-1a2b-4c9a-bcf4-edf219fdddad",
+   "metadata": {},
+   "source": [
+    "# Functions Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a23a95bf-e4e1-49a1-a692-3fe08c53b214",
+   "metadata": {},
+   "source": [
+    "### This tests that the ETL process works correctly and that the custom functions are working."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4bd72274-5cfe-4a39-bdea-62dcc16d2602",
@@ -11,6 +27,24 @@
     "import psycopg2\n",
     "import json\n",
     "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22f0b405-44a4-4ceb-9a8b-d6b4d3180602",
+   "metadata": {},
+   "source": [
+    "#### This runs the whole process\n",
+    "\n",
+    "After running `import main`:\n",
+    "* Postgres should install itself\n",
+    "* Postgres should connect\n",
+    "* An admin user should be created with credentials\n",
+    "* The sample data should be downloaded from a github gist to a \"raw data\" database\n",
+    "* ETL should run\n",
+    "* A new database \"data mart\" should be created\n",
+    "* The cleaned sample data should be loaded into the \"data mart\" database\n",
+    "* Four tables should be created in \"star schema\" fashion"
    ]
   },
   {
@@ -176,6 +210,14 @@
    ],
    "source": [
     "import main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d80d103-b353-4917-828e-4d3469463bfc",
+   "metadata": {},
+   "source": [
+    "#### Below are tests to ensure that the `main.py` code worked as expected"
    ]
   },
   {
