--- a/reports_test.ipynb
+++ b/reports_test.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7cd89298-f6ae-491e-a493-df6b3cb2aac3",
+   "metadata": {},
+   "source": [
+    "# Data Mart Reports Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11046ff2-de4c-45ff-ae8e-c4cb78f3f22c",
+   "metadata": {},
+   "source": [
+    "### This demonstrates that the data model is indeed working properly and that the appropriate queries are possible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd6f08ea-70a9-41bc-9fea-5a0f8482e610",
+   "metadata": {},
+   "source": [
+    "##### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "88e0b06a-725d-4411-9169-57a3d11dccaa",
@@ -11,6 +35,14 @@
     "import psycopg2\n",
     "import json\n",
     "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65a245dd-0d6f-48b6-b7c8-6a31a4388227",
+   "metadata": {},
+   "source": [
+    "##### DB Connection"
    ]
   },
   {
@@ -29,6 +61,14 @@
     "                        port= '5432')\n",
     "\n",
     "cursor = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3172aa7-4a44-4a10-beb8-2bfdcd276a18",
+   "metadata": {},
+   "source": [
+    "##### Schema Test and Reference"
    ]
   },
   {
@@ -64,6 +104,14 @@
     "cursor.execute(sql)\n",
     "cursor.fetchall()\n",
     "#{t[0]:t[1] for t in cursor.fetchall()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bc1110c-0714-4500-bd83-5e822e0038eb",
+   "metadata": {},
+   "source": [
+    "##### Requirement: The ability to look at the total number of orders shipped to a specific state in a given year\n"
    ]
   },
   {
@@ -520,7 +568,6 @@
     }
    ],
    "source": [
-    "#The ability to look at the total number of orders shipped to a specific state in a given year\n",
     "sql =\"\"\"\n",
     "WITH base AS (\n",
     "    \n",
@@ -552,6 +599,14 @@
     "\n",
     "pd.read_sql(sql, conn)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "499ede66-da1a-47a3-ab70-166872a1a0b2",
+   "metadata": {},
+   "source": [
+    "##### Requirement: The ability to look up all customers current addresses\n"
    ]
   },
   {
@@ -987,8 +1042,6 @@
     }
    ],
    "source": [
-    "#The ability to look up all customers current addresses\n",
-    "\n",
     "sql = \"\"\"\n",
     "WITH base AS (\n",
     "    \n",
@@ -1022,8 +1075,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e5d3f45-53c5-4b4d-961b-fe5e4af96fd7",
+   "metadata": {},
+   "source": [
+    "##### Summary reports that will show all orders and their order status"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "id": "a789de36-aa87-4006-97a4-9944b58ab801",
    "metadata": {},
    "outputs": [
@@ -1041,10 +1102,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "25b65dd9-8a42-493c-bbdb-cd9d29f7b949",
+   "metadata": {},
+   "source": [
+    "##### Requirement: A way to see what customers did not have order in certain years\n",
+    "###### Quote: \"Marketing is really interested in evaluating customer order trends\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "2978cb21-9baf-4ea0-a614-22a861c1d5ce",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1255,14 +1327,175 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26d20f2d-730d-43b1-b53f-79c617770f22",
+   "metadata": {},
+   "source": [
+    "##### Requirement Quarterly Sales reports at the product level as well a quarterly report at the customer level\n",
+    "###### Use Case: Product level"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "1cd45ced-f139-40a7-8b27-7cfd5eb71f6f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/tmp/ipykernel_45513/2175147423.py:40: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  pd.read_sql(sql, conn)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>quarter</th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Anzamlax</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Anzamlax</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>291.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Anzamlax</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>92.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Anzamlax</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>31.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Dentodox</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Zer Dax</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>103.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Zer Dax</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>170.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Zer Dax</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>33.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Zer Dax</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Zer Dax</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>76.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>165 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     year  quarter product_name  quantity  revenue\n",
+       "0    2013        3     Anzamlax       3.0     8.99\n",
+       "1    2014        1     Anzamlax      14.0   291.95\n",
+       "2    2014        2     Anzamlax       6.0    92.98\n",
+       "3    2015        2     Anzamlax       1.0    31.99\n",
+       "4    2013        2     Dentodox       1.0     5.99\n",
+       "..    ...      ...          ...       ...      ...\n",
+       "160  2015        1      Zer Dax       5.0   103.98\n",
+       "161  2015        3      Zer Dax       2.0   170.98\n",
+       "162  2016        1      Zer Dax       4.0    33.98\n",
+       "163  2016        2      Zer Dax       2.0    17.99\n",
+       "164  2017        1      Zer Dax       2.0    76.99\n",
+       "\n",
+       "[165 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Quarterly Sales reports at the product level as well a quarterly report at the customer level\n",
-    "\n",
+    "# Product level\n",
     "sql = \"\"\"\n",
     "WITH base AS (\n",
     "SELECT \n",
@@ -1272,6 +1505,8 @@
     ",quantity\n",
     ",customer_id\n",
     ",order_date\n",
+    ",CAST(EXTRACT(QTR FROM order_date) as int) AS quarter\n",
+    ",CAST(EXTRACT(YEAR FROM order_date) as int) AS year\n",
     "FROM\n",
     "order_data.order_details\n",
     "INNER JOIN\n",
@@ -1279,16 +1514,280 @@
     "USING (order_id)\n",
     ")\n",
     "\n",
-    "SELECT\n"
+    "SELECT \n",
+    "year\n",
+    ",quarter\n",
+    ",product_name\n",
+    ",sum(quantity) AS quantity\n",
+    ",sum(price) AS revenue\n",
+    "FROM base\n",
+    "GROUP BY\n",
+    "year\n",
+    ",quarter\n",
+    ",product_name\n",
+    "\n",
+    "ORDER BY\n",
+    "product_name\n",
+    ",year\n",
+    ",quarter\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "pd.read_sql(sql, conn)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e5ef055-0938-4cab-a502-964a4f0b1761",
+   "metadata": {},
+   "source": [
+    "##### Requirement Quarterly Sales reports at the product level as well a quarterly report at the customer level\n",
+    "###### Use Case: Product level"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "f934e13b-5f92-4136-b60c-5f868dc50d4b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/tmp/ipykernel_45513/1125860472.py:46: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  pd.read_sql(sql, conn)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>quarter</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Cammy</td>\n",
+       "      <td>Albares</td>\n",
+       "      <td>\\x7ba38823694b2ad8022642df27d970f814e575365a38...</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>128.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Minna</td>\n",
+       "      <td>Amigon</td>\n",
+       "      <td>\\x04e39f45829b3256718e228e2c69e2ff10cc4102a6b8...</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>95.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Minna</td>\n",
+       "      <td>Amigon</td>\n",
+       "      <td>\\x04e39f45829b3256718e228e2c69e2ff10cc4102a6b8...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>45.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Stephaine</td>\n",
+       "      <td>Barfield</td>\n",
+       "      <td>\\x7ad02460a8f832e6972a6baee7239524a14a6b97d923...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>156.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Kallie</td>\n",
+       "      <td>Blackwood</td>\n",
+       "      <td>\\x9da682d8f85d2aa70b915d8941eef3c32854839a2d4b...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>54.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tammara</td>\n",
+       "      <td>Wardrip</td>\n",
+       "      <td>\\x607e1d0536b2377fb3675a38c9441a3626328556e28f...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>92.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Tammara</td>\n",
+       "      <td>Wardrip</td>\n",
+       "      <td>\\x607e1d0536b2377fb3675a38c9441a3626328556e28f...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Sage</td>\n",
+       "      <td>Wieser</td>\n",
+       "      <td>\\x828533f54460fca012eea44a8724e51c1c5487b05f8d...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>67.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Sage</td>\n",
+       "      <td>Wieser</td>\n",
+       "      <td>\\x828533f54460fca012eea44a8724e51c1c5487b05f8d...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>18.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Maurine</td>\n",
+       "      <td>Yglesias</td>\n",
+       "      <td>\\xcc769c0fe18084f00c3c0ddd5c223d6261e846b29fba...</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>193.95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>87 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    year  quarter first_name  last_name  \\\n",
+       "0   2015        2      Cammy    Albares   \n",
+       "1   2014        1      Minna     Amigon   \n",
+       "2   2016        2      Minna     Amigon   \n",
+       "3   2015        3  Stephaine   Barfield   \n",
+       "4   2013        4     Kallie  Blackwood   \n",
+       "..   ...      ...        ...        ...   \n",
+       "82  2015        1    Tammara    Wardrip   \n",
+       "83  2015        3    Tammara    Wardrip   \n",
+       "84  2015        3       Sage     Wieser   \n",
+       "85  2016        4       Sage     Wieser   \n",
+       "86  2013        2    Maurine   Yglesias   \n",
+       "\n",
+       "                                          customer_id  quantity  revenue  \n",
+       "0   \\x7ba38823694b2ad8022642df27d970f814e575365a38...      11.0   128.96  \n",
+       "1   \\x04e39f45829b3256718e228e2c69e2ff10cc4102a6b8...       6.0    95.98  \n",
+       "2   \\x04e39f45829b3256718e228e2c69e2ff10cc4102a6b8...       2.0    45.99  \n",
+       "3   \\x7ad02460a8f832e6972a6baee7239524a14a6b97d923...      10.0   156.97  \n",
+       "4   \\x9da682d8f85d2aa70b915d8941eef3c32854839a2d4b...       5.0    54.98  \n",
+       "..                                                ...       ...      ...  \n",
+       "82  \\x607e1d0536b2377fb3675a38c9441a3626328556e28f...       5.0    92.98  \n",
+       "83  \\x607e1d0536b2377fb3675a38c9441a3626328556e28f...       1.0     7.99  \n",
+       "84  \\x828533f54460fca012eea44a8724e51c1c5487b05f8d...       5.0    67.98  \n",
+       "85  \\x828533f54460fca012eea44a8724e51c1c5487b05f8d...       4.0    18.99  \n",
+       "86  \\xcc769c0fe18084f00c3c0ddd5c223d6261e846b29fba...      12.0   193.95  \n",
+       "\n",
+       "[87 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Quarterly Sales reports at the product level as well a quarterly report at the customer level\n",
+    "#Customer level\n",
+    "sql = \"\"\"\n",
+    "WITH base AS (\n",
+    "SELECT \n",
+    "product_name\n",
+    ",order_id\n",
+    ",price\n",
+    ",quantity\n",
+    ",customer_id\n",
+    ",order_date\n",
+    ",CAST(EXTRACT(QTR FROM order_date) as int) AS quarter\n",
+    ",CAST(EXTRACT(YEAR FROM order_date) as int) AS year\n",
+    "FROM\n",
+    "order_data.order_details\n",
+    "INNER JOIN\n",
+    "order_data.orders\n",
+    "USING (order_id)\n",
+    ")\n",
+    "\n",
+    "SELECT \n",
+    "year\n",
+    ",quarter\n",
+    ",first_name\n",
+    ",last_name\n",
+    ",customer_id\n",
+    ",sum(quantity) AS quantity\n",
+    ",sum(price) AS revenue\n",
+    "FROM base\n",
+    "INNER JOIN\n",
+    "customer_data.customers\n",
+    "USING (customer_id)\n",
+    "GROUP BY\n",
+    "year\n",
+    ",quarter\n",
+    ",first_name\n",
+    ",last_name\n",
+    ",customer_id\n",
+    "ORDER BY\n",
+    "last_name\n",
+    ",first_name\n",
+    ",year\n",
+    ",quarter\n",
+    "\"\"\"\n",
+    "\n",
+    "pd.read_sql(sql, conn)\n"
+   ]
   }
  ],
  "metadata": {
